<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">

    <string name="app_name">PlaneWars</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_btn_start">Start Game</string>
    <string name="action_btn_restart">Restart Game</string>
    <string name="action_btn_quit">Quit Game</string>
    <string name="activity_finish_text">Score:</string>
    <string name="activity_win_text"></string>


</resources>
